--- a/jokenpo/package.json
+++ b/jokenpo/package.json
@@ -9,8 +9,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "inquirer": "^8.1.2"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
